# cpp-OpenGL-tutorial

./: .clang-format  .gitignore  CMakeLists.txt
assets/: lamp.fs  object.fs  object.vs
src/: main.cpp
src/graphics/: light.cpp  light.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h
src/graphics/models/: cube.hpp  lamp.hpp
src/io/: Camera.cpp  Camera.h  Joystick.cpp  Joystick.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Screen.cpp  Screen.h
src/stb/: CMakeLists.txt
